--- a/roles/drbd_node/tasks/drbd_node.yml
+++ b/roles/drbd_node/tasks/drbd_node.yml
@@ -33,6 +33,12 @@
   tags: 
     - drbd_cluster_init
 
+- name: Check Proxmox version 
+  shell: "pveversion | cut -d '/' -f 2 | cut -d '.' -f 1" 
+  register: pve_version 
+  tags: 
+    - check_pveversion
+
 - name: Download DRBD9 package-signing-pubkey 
   apt_key: 
     url: "https://packages.linbit.com/package-signing-pubkey.asc" 
@@ -41,20 +47,23 @@
     - drbd_cluster_init
     - repo
  
-- name: Add drbd9  repository from Linbit
+- name: Add drbd9  repository for Proxmox 4
   apt_repository: 
     repo: "deb https://packages.linbit.com/proxmox/ proxmox-4 drbd-9.0" 
-    state: present 
+    state: present
+  when: pve_version.stdout == "4"
   tags:  
     - drbd_cluster_init
     - repo
 
-- name: Check Proxmox version 
-  shell: "pveversion | cut -d '/' -f 2 | cut -d '.' -f 1" 
-  register: pve_version 
-  tags: 
-    - check_pveversion
-
+- name: Add drbd9  repository for Proxmox 5
+  apt_repository:
+    repo: "deb https://packages.linbit.com/proxmox/ proxmox-5 drbd-9.0"
+    state: present
+  when: pve_version.stdout == "5"
+  tags:
+    - drbd_cluster_init
+    - repo
 
 - name: Add no subscription repository
   apt_repository:
@@ -73,60 +82,67 @@
     - drbd_cluster_init
     - repo
 
-- name: Check if there is pve-kernel upgrade
-  shell: apt list --upgradable 2>/dev/null | grep -c '^pve-kernel'
-  register: kernel_upgrade
-  ignore_errors: True
+#- name: Check if there is pve-kernel upgrade
+#  shell: apt list --upgradable 2>/dev/null | grep -c '^pve-kernel'
+#  register: kernel_upgrade
+#  ignore_errors: True
 
-- name: Upgrade all packages to the latest version
-  apt:
-    upgrade: dist
-  when: kernel_upgrade.stdout == "1"
+#- name: Upgrade all packages to the latest version
+#  apt:
+#    upgrade: dist
+#  when: kernel_upgrade.stdout == "1"
 
-- name: Reboot
-  shell: sleep 5; reboot
-  async: 10
-  poll: 0
-  when: reboot | default(False) and kernel_upgrade.stdout == "1"
-  tags:
-    - reboot
+#- name: Reboot
+#  shell: sleep 5; reboot
+#  async: 10
+#  poll: 0
+#  when: reboot | default(False) and kernel_upgrade.stdout == "1"
+#  tags:
+#    - reboot
 
-- name: local action
-  wait_for:
-    delay: 15
-    port: 22
-    host: "{{ansible_default_ipv4['address']}}"
-    timeout: 250
-  delegate_to: localhost
-  tags:
-    - reboot
+#- name: local action
+#  wait_for:
+#    delay: 15
+#    port: 22
+#    host: "{{ansible_default_ipv4['address']}}"
+#    timeout: 250
+#  delegate_to: localhost
+#  tags:
+#    - reboot
 
-- name: Wait to start hosts
-  wait_for:
-    port: 8006
-    state: started
-  tags:
-    - reboot
+#- name: Wait to start hosts
+#  wait_for:
+#    port: 8006
+#    state: started
+#  tags:
+#    - reboot
 
 - name: Find kernel release
   command: "uname -r"
   register: release
 
-- name: Install kernel-headers, drbdmanage-proxmox, drbd-dkms and their dependencies when Proxmox is version 5
+- name: Install kernel-headers, drbdmanage-proxmox, python-drbdmanage when Proxmox is version 5
   apt: 
     name:    
       - pve-headers-{{release.stdout}}
+      - drbd-utils
       - drbdmanage-proxmox
-      - drbd-dkms
+      - python-drbdmanage
   when: pve_version.stdout == "5"
   tags:  
     - drbd_cluster_init
     - check_pveversion
 
+- name: Install drbd-dkms 9.0.7 which is tested
+  apt:
+    deb: http://packages.linbit.com/proxmox/dists/proxmox-4/drbd-9.0/binary-amd64/drbd-dkms_9.0.7+linbit-1_all.deb
+    install_recommends: yes
+    state: present
+
 - name: Install drbd-module, drbdmanage and their dependencies 
   apt: 
     name:    
-      - drbdmanage-proxmox 
+      - drbdmanage-proxmox
   when: pve_version.stdout == "4"
   tags:
     - drbd_cluster_init
@@ -142,5 +158,3 @@
     - drbdmanage
   tags:
     - drbd_cluster_init
-
-
