--- a/roles/proxmox/tasks/proxmox_cluster.yml
+++ b/roles/proxmox/tasks/proxmox_cluster.yml
@@ -1,45 +1,45 @@
 ---
 - name: Set fact Proxmox master
   set_fact:
-    proxmox_primary_node: "{{ groups[target+'_drbd_nodes'][0] }}"
+    proxmox_leader_node: "{{ groups[target+'_drbd_nodes'][0] }}"
   tags:
     - cluster
 
 - name: Set fact for Proxmox agents
   set_fact:
-    proxmox_agents: "{{ groups[target+'_drbd_nodes'][1:] }}"
+    proxmox_nodes: "{{ groups[target+'_drbd_nodes'][1:] }}"
   tags:
     - cluster
 
 - name: Create a cluster on master
   shell: pvecm create my-cluster
   register: cluster_init
-  when: inventory_hostname_short in proxmox_primary_node
+  when: inventory_hostname_short in proxmox_leader_node
   failed_when: not "'cluster config '/etc/pve/corosync.conf' already exists' in cluster_init.stderr"
   tags:
     - cluster
 
 - name: Nodes add themselves in cluster
-  command: pvecm add {{ proxmox_primary_node }} -force
+  command: pvecm add {{ proxmox_leader_node }} -force
   register: result
   until: result.rc == 0
   retries: 5
-  when: inventory_hostname in proxmox_agents
+  when: inventory_hostname in proxmox_nodes
   tags:
     - cluster
  
-- name: Add drbdstorage configuration in a storage file
+- name: Add drbdstorage configuration in a temporary file
   template:
     src: storage.cfg.j2
     dest: /tmp/storage.cfg
     owner: root
     group: www-data
-  when: inventory_hostname == proxmox_primary_node
+  when: inventory_hostname == proxmox_leader_node
   tags:
     - cluster
 
 - name: Copy storage.cfg to /etc/pve
   shell: cp /tmp/storage.cfg /etc/pve/ && rm /tmp/storage.cfg
-  when: inventory_hostname == proxmox_primary_node
+  when: inventory_hostname == proxmox_leader_node
   tags:
     - storage
