--- a/drbd_init.yml
+++ b/drbd_init.yml
@@ -1,21 +1,21 @@
 ---
 - hosts: "{{ target + '_drbd_nodes' }}"
   tasks:
-    - name: Set fact for primary_node
+    - name: Set fact for Leader node
       set_fact:
-        drbd_primary_node: "{{ groups[target+'_drbd_nodes'][0] }}"
+        drbd_leader: "{{ groups[target+'_drbd_nodes'][0] }}"
       tags:
         - drbd_cluster_init
 
-    - name: Set fact for agents
+    - name: Set fact for drbd nodes
       set_fact:
-         drbd_agents: "{{ groups[target+'_drbd_nodes'][1:] }}"
+         drbd_nodes: "{{ groups[target+'_drbd_nodes'][1:] }}"
       tags:
         - drbd_cluster_init 
 
-    - name: Initializing cluster only on primary node
+    - name: Initializing cluster only on leader node
       command: drbdmanage init -q
-      when: inventory_hostname == drbd_primary_node
+      when: inventory_hostname == drbd_leader
       tags:
         - drbd_cluster_init
 
