Change /etc/lvm/lvm.conf: wipe_signatures_when_zeroing_new_lvs = 0

--- a/main.yml
+++ b/main.yml
@@ -1,17 +1,17 @@
 ---    
-#- hosts: "{{ target + '_drbd_nodes' }}"
-#  roles:
-#    - drbd_node
+- hosts: "{{ target + '_drbd_nodes' }}"
+  roles:
+    - drbd_node
+  tags:
+    - drbd_node
+
+#- include: drbd_init.yml
 #  tags:
-#    - drbd_node
-
-- include: drbd_init.yml
-  tags:
-    - init
-
-- include: drbd_node_add.yml
-  tags:
-    - node_add
+#    - init
+#
+#- include: drbd_node_add.yml
+#  tags:
+#    - node_add
 
 #- hosts: "{{ target + '_drbd_nodes' }}"
 #  roles:
