First check if state of drbd-node is UpToDate and then add the next node

--- a/drbd_node_add.yml
+++ b/drbd_node_add.yml
@@ -1,5 +1,7 @@
 ---
+
 - hosts: "{{ target + '_drbd_nodes' }}"
+  serial: 1
   tasks:
     - name: Set fact for Leader node
       set_fact:
@@ -14,6 +16,25 @@
       tags:
         - check
         - first_time
+
+    - name: Leader node add agents in cluster
+      shell: drbdmanage add-node {{ inventory_hostname_short }} {{ ansible_default_ipv4['address'] }} -q
+      when: inventory_hostname in drbd_nodes
+      delegate_to: "{{ drbd_leader }}"
+      ignore_errors: yes
+
+    - name: Drbdmanage restart
+      shell: drbdmanage restart
+      delegate_to: "{{ drbd_leader }}"
+
+    - name: Check drbd node state
+      shell: drbdsetup status | grep -A2 {{ inventory_hostname_short }} | grep -c UpToDate
+      register: check_node_state
+      until: check_node_state.stdout == "2"
+      retries: 50
+      delay: 3
+      when: inventory_hostname in drbd_nodes
+      delegate_to: "{{ drbd_leader }}"
 
 #    - name: Check if drbd nodes are in cluster
 #      shell: drbdmanage nodes -m 2>/dev/null | grep -c '^{{hostvars[item]["inventory_hostname_short"]}}'
@@ -33,11 +54,15 @@
 #      tags:
 #        - check
 
-    - name: Leader node add agents in cluster
-      shell: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']['address'] }} -q
-      with_items: "{{ drbd_nodes }}"
-      register: add_node_command
-      when: inventory_hostname == drbd_leader
-      tags:
-        - check
-        - first_time
+#    - name: Check if drbd-node has established connection
+#      shell: drbdsetup status | grep -A2 {{ hostvars[item]['inventory_hostname_short'] }} | grep -c UpToDate
+#      register: drbd_node_connection
+
+#    - name: Leader node add agents in cluster
+#      shell: drbdmanage add-node {{ hostvars[item]['inventory_hostname_short'] }} {{ hostvars[item]['ansible_default_ipv4']['address'] }} -q
+#      with_items: "{{ drbd_nodes }}"
+#      register: add_node_command
+#      when: inventory_hostname == drbd_leader
+#      tags:
+#        - check
+#        - first_time
